# OCR_Hacking_Bridge

./: .gitignore  OCR_mike.py  OCR_web.py  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
pipeline/: __init__.py  classifier.py  config.py  export.py  extractor.py  ingestion.py  llm_client.py  models.py  orchestrator.py  validator.py
